; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_transport.c_seg_sent.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_transport.c_seg_sent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seg_tx = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @seg_sent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @seg_sent(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.seg_tx*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.seg_tx*
  store %struct.seg_tx* %7, %struct.seg_tx** %5, align 8
  %8 = load %struct.seg_tx*, %struct.seg_tx** %5, align 8
  %9 = getelementptr inbounds %struct.seg_tx, %struct.seg_tx* %8, i32 0, i32 0
  %10 = load %struct.seg_tx*, %struct.seg_tx** %5, align 8
  %11 = call i32 @SEG_RETRANSMIT_TIMEOUT(%struct.seg_tx* %10)
  %12 = call i32 @k_delayed_work_submit(i32* %9, i32 %11)
  ret void
}

declare dso_local i32 @k_delayed_work_submit(i32*, i32) #1

declare dso_local i32 @SEG_RETRANSMIT_TIMEOUT(%struct.seg_tx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
